--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@
     background-blend-mode: overlay;
 }
 #promotion > .row > :nth-child(1) {
+    background-color: #434343;
     background-image: url("../img/promo.png");
     background-blend-mode: overlay;
     background-position: center;
